3. Fix removing a selection of favourites, when Material is set to order the
   favourites. Need to delete from the highest favourite ID to the lowest, but
   sorting can corrupt this order.
4. Don't display loaded playlist name in queue.
5. Use "playlistcontrol cmd:load" (etc) to load plylists.
6. Colour repeat, shuffle, and power icons when active.

0.9.4
-----
 1. Fix detecting if an item is in favourites if its within a favorites folder.
 2. Try to use material icons, and not LMS icons, for favourites entries.
 3. Enable history menu even when there is no sub-title.
 4. Enable 'More' for artists, albums, or tracks within a favourite.
 5. If showing jumplist for mixed folders and files, draw jumplist items for
    folders slightly dimmer than files.
 6. Fix album not appearing in favourites, if it is the last item.
 7. When building SlimBrowse commands, don't add 'null' or 'undefined' values.
 8. Don't hide 'Save to favourites' and 'Delete favourite' options from 'More'
    lists.
 9. As per expand/collapse button, the grid/list button icon should indicate the
    state that will be, not what is.
10. When pinning radio stations, just save URL and title, etc, not command.
11. Only use media session with mobile browsers.
12. Place pin, and unpin, actions into a menu, for consistency.
13. Add play, play next, and insert to pinned radio items menu.
14. Always show menu when clicking on pinned radio item.
15. Only show dotted menu button if an item has a menu.
16. Check whether "query_param" exists in "URI::http" before using. If not, then
    manually parse URI string.
17. Only update favourite's set if ["favorites", "changed"] is received from
    CometD.
18. In Mobile layout, switch to now-playing when clicking play/add icon in
    sub-toolbar (play/add all case).
19. Don't show ratings stars for streamed tracks (negative ID).

0.9.3
-----
 1. Update Dutch translation - thanks to Blackfiction.
 2. Add searched terms to list title.